# gr-dvbs2rx

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  MANIFEST.md  README  README.md
.github/workflows/: check_formatting.yml  deb_package.yml  formatting.yml  rpm_package.yml  test.yml
.packaging/builder/: README.md  deb_builder.docker  rpm_builder.docker
.packaging/debian/: changelog  control  copyright  gr-dvbs2rx-dev.install  gr-dvbs2rx-doc.install  gr-dvbs2rx.install  gr-dvbs2rx.manpages  rules
.packaging/rpm/: gr-dvbs2rx.spec
.packaging/scripts/: check-version-tag.sh  pkg-debian.sh  pkg-prep.sh  pkg-rpm.sh
apps/: CMakeLists.txt  README.md  dvbs2-rec  dvbs2-rx  dvbs2-tx  dvbs2_rx.grc  dvbs2_rx.py  dvbt2_rx.grc
bench/: CMakeLists.txt
bench/ber/: README.md
bench/ber/src/: bench_plsc.cc
bench/cpu/: CMakeLists.txt  README.md  benchmark.cc
bench/fec/: CMakeLists.txt  README.md
bench/fec/src/: CMakeLists.txt  bench_bch.cc  bench_plsc.cc  bitman.hh  galois_field.hh  gr_bch.cc  gr_bch.h
bench/fec/src/aff3ct_bch/: CMakeLists.txt  Decoder_BCH_DVBS2.cpp  Decoder_BCH_DVBS2.hpp  Encoder_BCH_DVBS2.cpp  Encoder_BCH_DVBS2.hpp
bench/fec/src/gr_bch/: CMakeLists.txt  api.h  bitman.hh  galois_field.hh  gr_bch.cc  gr_bch.h
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrPythonLocal.cmake  GrSwig.cmake  GrTest.cmake  dvbs2rxConfig.cmake
docs/: CMakeLists.txt  README.dvbs2rx  installation.md  support.md  usage.md
docs/doxygen/: CMakeLists.txt  Doxyfile.in  pydoc_macros.h  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
docs/man/: CMakeLists.txt  dvbs2-rx.1.in  dvbs2-tx.1.in
examples/: dvbs2_fec_ber.grc  dvbs2_pl_sync.grc  dvbs2_plheader_sync.grc  dvbs2_rx.grc  dvbs2_rx_iq_file.grc  dvbs2_tx_rx.grc  dvbs2rx_rx_hier.grc
grc/: CMakeLists.txt  dvbs2rx_bbdeheader_bb.block.yml  dvbs2rx_bbdeheader_bb.xml  dvbs2rx_bbdescrambler_bb.block.yml  dvbs2rx_bbdescrambler_bb.xml  dvbs2rx_bch_decoder_bb.block.yml  dvbs2rx_bch_decoder_bb.xml  dvbs2rx_dvb_params.block.yml  dvbs2rx_ldpc_decoder_bb.block.yml  dvbs2rx_ldpc_decoder_cb.block.yml  dvbs2rx_ldpc_decoder_cb.xml  dvbs2rx_plsync_cc.block.yml  dvbs2rx_rotator_cc.block.yml  dvbs2rx_symbol_sync_cc.block.yml  dvbs2rx_xfecframe_demapper_cb.block.yml
grc/hier/: CMakeLists.txt  dvbs2rx_rx_hier.grc
include/dvbs2rx/: CMakeLists.txt  api.h  bbdeheader_bb.h  bbdescrambler_bb.h  bch_decoder_bb.h  dvb_config.h  dvbs2_config.h  dvbt2_config.h  ldpc_decoder_cb.h  plsync_cc.h  symbol_sync_cc.h
include/gnuradio/dvbs2rx/: CMakeLists.txt  api.h  bbdeheader_bb.h  bbdescrambler_bb.h  bch_decoder_bb.h  dvb_params.h  ldpc_decoder_bb.h  ldpc_decoder_cb.h  plsync_cc.h  rotator_cc.h  symbol_sync_cc.h  xfecframe_demapper_cb.h
lib/: CMakeLists.txt  algorithms.hh  avx2.hh  bbdeheader_bb_impl.cc  bbdeheader_bb_impl.h  bbdescrambler_bb_impl.cc  bbdescrambler_bb_impl.h  bch.cc  bch.h  bch_decoder_bb_impl.cc  bch_decoder_bb_impl.h  bitman.hh  bitset256.h  bose_chaudhuri_hocquenghem_decoder.hh  cdeque.h  crc.h  debug_level.h  delay_line.h  dvb_defines.h  dvb_params.cc  dvb_s2_tables.hh  dvb_s2x_tables.hh  dvb_t2_tables.hh  exclusive_reduce.hh  fec_params.cc  fec_params.h  flooding_decoder.hh  galois_field.hh  generic.hh  gf.cc  gf.h  gf2_util.h  gf_util.h  layered_decoder.hh  ldpc.hh  ldpc_decoder.hh  ldpc_decoder_bb_impl.cc  ldpc_decoder_bb_impl.h  ldpc_decoder_cb_impl.cc  ldpc_decoder_cb_impl.h  (+57 more)
lib/ldpc_decoder/: CMakeLists.txt  algorithms.hh  avx2.hh  flooding_decoder.hh  generic.hh  layered_decoder.hh  ldpc_decoder_avx2.cc  ldpc_decoder_generic.cc  ldpc_decoder_neon.cc  ldpc_decoder_sse41.cc  neon.hh  simd.hh
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  defs.py  params.py  qa_bbdeheader_bb.py  qa_bbdescrambler_bb.py  qa_bch_decoder_bb.py  qa_ldpc_decoder_cb.py  qa_params.py  qa_plsync_cc.py  qa_symbol_sync_cc.py
python/bindings/: CMakeLists.txt  bbdeheader_bb_python.cc  bbdescrambler_bb_python.cc  bch_decoder_bb_python.cc  dvb_config_python.cc  dvbs2_config_python.cc  dvbt2_config_python.cc  ldpc_decoder_cb_python.cc  plsync_cc_python.cc  python_bindings.cc  symbol_sync_cc_python.cc
python/bindings/docstrings/: bbdeheader_bb_pydoc_template.h  bbdescrambler_bb_pydoc_template.h  bch_decoder_bb_pydoc_template.h  dvb_config_pydoc_template.h  dvbt2_config_pydoc_template.h  ldpc_decoder_cb_pydoc_template.h  plsync_cc_pydoc_template.h  symbol_sync_cc_pydoc_template.h
python/dvbs2rx/: CMakeLists.txt  __init__.py  defs.py  params.py  qa_bbdeheader_bb.py  qa_dvb_params.py  qa_params.py  qa_plsync_cc.py  qa_rotator_cc.py  qa_symbol_sync_cc.py  qa_xfecframe_demapper_cb.py  utils.py
python/dvbs2rx/bindings/: CMakeLists.txt  bbdeheader_bb_python.cc  bbdescrambler_bb_python.cc  bch_decoder_bb_python.cc  bind_oot_file.py  dvb_config_python.cc  dvb_params_python.cc  dvbs2_config_python.cc  dvbt2_config_python.cc  header_utils.py  ldpc_decoder_bb_python.cc  ldpc_decoder_cb_python.cc  plsync_cc_python.cc  python_bindings.cc  rotator_cc_python.cc  symbol_sync_cc_python.cc  xfecframe_demapper_cb_python.cc
python/dvbs2rx/bindings/docstrings/: bbdeheader_bb_pydoc_template.h  bbdescrambler_bb_pydoc_template.h  dvb_params_pydoc_template.h  ldpc_decoder_bb_pydoc_template.h  ldpc_decoder_cb_pydoc_template.h  plsync_cc_pydoc_template.h  rotator_cc_pydoc_template.h  xfecframe_demapper_cb_pydoc_template.h
swig/: CMakeLists.txt  dvbs2rx_swig.i
themes/: CMakeLists.txt  dvbs2_dark.qss
util/: README.md  iq-rec-cli.py
util/iqrec/: cli.py  cpu.py
